# pathsim-fmi

./: .gitignore  README.md  TEMPLATE.md  init.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/source/examples/: fmu_cosimulation.ipynb  fmu_model_exchange_bouncing_ball.ipynb  fmu_model_exchange_vanderpol.ipynb  linear_feedback.ipynb
src/pathsim_fmi/: __init__.py  blocks.py  wrapper.py
src/pathsim_toolbox/: __init__.py  example_block.py
tests/: conftest.py  test_blocks.py  test_cosim_system.py  test_example_block.py  test_me_system.py  test_reference_fmus.py  test_wrapper.py
