[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim-toolbox"
dynamic = ["version"]
description = "A toolbox for PathSim"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PathSim Contributors"}
]
keywords = ["simulation", "pathsim", "block diagram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pathsim>=0.22",
    "numpy>=1.15",
    # If your toolbox needs a dependency that ships native code (e.g.
    # pybamm, jsbsim, casadi, …) it will fail to install in Pyodide. Tag
    # it with a PEP 508 environment marker so a normal pip install on
    # Linux/macOS/Windows still pulls it eagerly, but micropip in the
    # browser silently skips it. Example:
    #
    #     "pybamm>=25.12; sys_platform != 'emscripten'",
    #
    # Pair this with a defensive `try/except ImportError` re-export in
    # `src/pathsim_<name>/__init__.py` so the rest of the toolbox stays
    # importable when the heavy dependency is absent.
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://pathsim.org"
Documentation = "https://docs.pathsim.org/toolbox"
Repository = "https://github.com/pathsim/pathsim-toolbox"
Issues = "https://github.com/pathsim/pathsim-toolbox/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pathsim_toolbox/_version.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
files = ["src/pathsim_toolbox"]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
