[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim-fmi"
dynamic = ["version"]
description = "FMI/FMU co-simulation toolbox for PathSim"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PathSim Contributors"}
]
keywords = ["simulation", "pathsim", "FMI", "FMU", "co-simulation", "model exchange"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pathsim>=0.22",
    "numpy>=1.15",
    # FMPy ships pure-Python code but loads the FMU's native binary at
    # runtime via ctypes, which can't happen under Pyodide. The marker
    # resolves to a normal eager install on every real platform and is
    # skipped on Emscripten so the toolbox stays importable in the browser.
    "fmpy>=0.3.29; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://pathsim.org"
Documentation = "https://docs.pathsim.org/fmi"
Repository = "https://github.com/pathsim/pathsim-fmi"
Issues = "https://github.com/pathsim/pathsim-fmi/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pathsim_fmi/_version.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
files = ["src/pathsim_fmi"]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
